Service/laodbalancer-myapp.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    #service.beta.kubernetes.io/aws-load-balancer-ip-address-type: dualstack --> for IPv6 Cluster
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
      app: myvertexapp
      version: 2.6.1
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
